MAJ from romain branche + clear code of solution in backtrack + correct some error